# forge-orchestrator

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml
src/forge_orchestrator/: __init__.py  __main__.py  cli.py  conversation.py  keys.py  logging.py  mcp_client.py  models_cache.py  models_config.py  openrouter_client.py  orchestrator.py  server.py  settings.py  storage.py
src/forge_orchestrator/models/: __init__.py  api.py  conversation.py  messages.py  openrouter.py  provider.py
src/forge_orchestrator/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py  registry.py
src/forge_orchestrator/toon/: __init__.py  transformer.py
tests/: __init__.py  conftest.py  test_models.py  test_orchestrator.py  test_provider_routing.py  test_server.py  test_storage.py  test_tool_creation.py  test_toon.py
