[project]
name = "forge-orchestrator"
version = "0.1.0"
description = "LLM agent loop for Agentic Forge - connects UI to language models and MCP tools"
readme = "README.md"
authors = [
    { name = "Kashif Iftikhar", email = "kashif@compulife.com.pk" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.28.1",
    "aiofiles>=24.0.0",
    "fastmcp>=2.14.0",
]

[project.scripts]
orchestrator = "forge_orchestrator.cli:app"

[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    "watchfiles>=1.0.0",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "ARG003",   # Unused class method argument - needed for pydantic settings override
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "RUF012",   # Mutable class attribute - needed for Pydantic settings
    "RUF022",   # __all__ not sorted (we prefer logical grouping)
    "SIM102",   # Nested if statements - sometimes clearer
    "SIM117",   # Nested with statements - sometimes clearer
    "TC002",    # Move import into type-checking block
    "TC003",    # Move import into type-checking block
]

[tool.ruff.lint.per-file-ignores]
# Allow import inside function for lazy loading / circular import avoidance
"src/forge_orchestrator/cli.py" = ["PLC0415"]
"src/forge_orchestrator/server.py" = ["PLC0415"]
"src/forge_orchestrator/orchestrator.py" = ["PLC0415"]
"src/forge_orchestrator/storage.py" = ["PLC0415"]
"src/forge_orchestrator/settings.py" = ["PLC0415"]
"tests/*.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["forge_orchestrator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# Pyright Configuration
# ============================================================================
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may call external APIs)",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/forge_orchestrator"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
